# MNIST_tutorial

./: README.md  config.json  eval.ipynb  model.py  pyproject.toml  requirements.txt  train.ipynb
utils/: visualizer.py
