[tool.poetry]
name = "mnist-classification"
version = "0.1.0"
description = ""
authors = ["Yuito Kameda <kameda.yuito.ky6@naist.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.26.4"
matplotlib = "3.8.4"
ipykernel = "6.29.5"
notebook = "^7.3.2"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchsummary = "^1.5.1"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
